--- a/progettoP/Tesi.tex
+++ b/progettoP/Tesi.tex
@@ -2558,6 +2558,227 @@ L' algortitomo polishing è un euristico che sfrutta l' algoritmo RINS all' inte
 LOCAL BRANCHING
 \vspace{2\baselineskip}
 
+
+\begin{lstlisting}
+static void Polishing(Cplex cplex, Instance instance, Process process, Random rnd, int sizePopulation, Stopwatch clock)
+\end{lstlisting}    
+
+\begin{itemize}
+    \item \textbf{instance}: riferimento all' oggetto contenente tutte le informazioni relative all' istanza del Problema del Commesso Viaggiatore corrente;
+    \item \textbf{process}: 
+    \item \textbf{rnd}: istanza della classe Random utilizzata per la generazione dei numeri casuali;
+    \item \textbf{sizePopulation}: Dimensione della popolazione;
+    \item \textbf{clock}: 
+\end{itemize}
+
+
+
+\begin{lstlisting}
+//Definisco l' oggetto che codifica la soluzione che rappresenta l' incumbent(miglio soluzione in assoluto fra tutte le generazioni)
+PathGenetic incumbentSol = new PathGenetic();
+
+//Miglior soluzione all' interno di una generazione
+PathGenetic currentBestPath = null;
+
+//Popolazione padre corrente
+List<PathGenetic> OriginallyPopulated = new List<PathGenetic>();
+            
+//Popolazione figlia
+List<PathGenetic> ChildPoulation = new List<PathGenetic>();
+
+List<int>[] listArray = Utility.BuildSLComplete(instance);
+
+//Costruisco il modello
+INumVar[] x = Utility.BuildModel(cplex, instance, -1);
+            
+//Installo la lazy
+cplex.Use(new TSPLazyConsCallback(cplex, x, instance, process, false));
+            
+//Ripristino il numero di thread al numero di core logici
+cplex.SetParam(Cplex.Param.Threads, cplex.GetNumCores());
+
+//Setto un EpGap di 0.2(molto alto) in modo da produrre nel più breve tempo possibile una soluzione
+cplex.SetParam(Cplex.DoubleParam.EpGap, 0.1);
+
+for (int i = 0; i < sizePopulation; i++)                       
+    OriginallyPopulated.Add(Utility.NearestNeightborGeneticPolish(instance, rnd, listArray));
+            
+do
+{
+    for (int i = 0; i < sizePopulation; i++)
+    {
+          if ((i != 0) && (i % 2 != 0))
+              ChildPoulation.Add(Utility.GenerateChildPolish(cplex, instance, x, OriginallyPopulated[i], OriginallyPopulated[i - 1]));                   
+     }
+
+     OriginallyPopulated = Utility.NextPopulation(instance, sizePopulation, OriginallyPopulated, ChildPoulation);
+
+     //Miglio soluzione della popolazione attualE
+     currentBestPath = Utility.BestSolution(OriginallyPopulated);
+
+      if (currentBestPath.cost < incumbentSol.cost)
+      {
+
+          //Aggiorno la soluzione incumbent
+          incumbentSol = (PathGenetic)currentBestPath.Clone();
+
+          //Print the new incombent solution
+          
+           StreamWriter file = new StreamWriter(instance.InputFile + ".dat", false);
+
+           for (int i = 0; i < instance.NNodes; i++)
+           {
+               for (int j = i + 1; j < instance.NNodes; j++)
+               {
+                    int pos = Utility.xPos(i, j, instance.NNodes);
+
+                     if (incumbentSol.path[pos] >= 0.5)
+                     {
+                           file.WriteLine(instance.Coord[i].X + " " + instance.Coord[i].Y + " " + (i + 1));
+                           file.WriteLine(instance.Coord[j].X + " " + instance.Coord[j].Y + " " + (j + 1) + "\n");
+                      }
+               }
+           }
+
+           file.Close();
+           Utility.PrintGNUPlot(process, instance.InputFile, 1, incumbentSol.cost, -1);                                  
+       }
+
+       ChildPoulation.RemoveRange(0, ChildPoulation.Count);
+
+} while (clock.ElapsedMilliseconds / 1000.0 < instance.TimeLimit);
+
+Console.WriteLine("Best distance found within the timelit is: " + incumbentSol.cost);             
+\end{lstlisting}    
+
+
+\begin{lstlisting}
+public static PathGenetic GenerateChildPolish(Cplex cplex, Instance instance, INumVar[] x, PathGenetic mother, PathGenetic father)    
+\end{lstlisting}    
+
+\begin{itemize}
+	\item \textbf{cplex}: oggetto sul quale si definirà il modello matematico(funzione obbiettivo,variabili e vincoli)
+    \item \textbf{instance}: riferimento all' oggetto contenente tutte le informazioni relative all' istanza del Problema del Commesso Viaggiatore corrente;
+    \item \textbf{x}: vettore contente le variabili del modello matematico;
+    \item \textbf{mother}: Oggetto che rappresenta il primo percorso su cui viene applicato l' algoritmo RINS
+    \item \textbf{father}: Oggetto che rappresenta il secondo percorso su cui viene applicato l' algoritmo RINS
+\end{itemize}
+
+
+\begin{lstlisting}
+//Percorso di codifica del figlio
+int[] path = new int[mother.path.Length];
+
+//Fisso le variabili in soluzione in entrambi i genitori
+for (int i = 0; i < mother.path.Length; i++)
+{            
+    if (mother.path[i] == 1 && father.path[i] == 1)
+        x[i].LB = 1;                                    
+}
+           
+//Risolvo il modello
+cplex.Solve();
+           
+//Ottengo la soluzione ottima calcolata da Cplex
+double[] pathChild = cplex.GetValues(x);
+
+//Traduco il vettore restituitomi in un vettore di interi
+for (int i = 0; i< mother.path.Length; i++)
+{
+     if(pathChild[i] >= 0.5)
+         path[i] = 1;
+      else
+         path[i] = 0;
+}
+
+//Creiamo il figlio
+PathGenetic child = new PathGenetic(path, cplex.GetObjValue());
+
+//Fisso il LB di tutte le variabili a 
+for (int i = 0; i < mother.path.Length; i++)          
+    x[i].LB = 0;
+            
+return child;             
+\end{lstlisting}    
+
+
+\begin{lstlisting}
+public static PathGenetic NearestNeightborGeneticPolish(Instance instance, Random rnd, List<int>[] listArray)    
+\end{lstlisting}  
+  
+\begin{itemize}
+	\item \textbf{cplex}:oggetto sul quale si definirà il modello matematico(funzione obbiettivo,variabili e vincoli) 
+    \item \textbf{rnd}: istanza della classe Random utilizzata per la generazione dei numeri casuali;
+    \item \textbf{listArray}: lista in cui all'indice \textbf{i} è presente un vettore di dimensione instance.Nnodes al cui interno sono, in ordine crescente rispetto alla distanza assunta dal nodo \textbf{i}, presenti gli indici associati ai nodi del grafo.
+\end{itemize}
+
+
+\begin{lstlisting}
+//Vettore che codifica il percorso g
+int[] heuristicSolutionCplex = new int[(instance.NNodes - 1) * instance.NNodes / 2];
+         
+//Costo del circuito prodotto
+double cost = 0;
+
+//Rappresenta il lato corrente
+int[] currentEdge = new int[2];
+
+           
+//List that contains all nodes belonging to the graph 
+List<int> availableNodes = new List<int>();
+
+
+currentEdge[0] = 0;
+            
+availableNodes.Add(currentEdge[0]);
+
+for (int i = 1; i < instance.NNodes; i++)
+{
+     bool found = false;
+     int plus = RndGeneticPolish(rnd);
+     int nextNode = listArray[currentEdge[0]][plus];
+
+     do
+     {
+         //We control that the selected node has never been visited
+         if (availableNodes.Contains(nextNode) == false)
+         {
+             currentEdge[1] = nextNode;
+             int pos = xPos(currentEdge[0], currentEdge[1], instance.NNodes);
+
+              cost += (int)Point.Distance(instance.Coord[currentEdge[0]], instance.Coord[currentEdge[1]], instance.EdgeType);
+
+              heuristicSolutionCplex[pos] = 1;
+
+              availableNodes.Add(nextNode);
+
+              currentEdge[0] = nextNode;
+
+               found = true;
+           }
+           else
+           {
+               plus++;
+               if (plus >= instance.NNodes - 1)
+               {
+                   nextNode = listArray[currentEdge[0]][0];
+                   plus = 0;
+               }
+               else
+                  nextNode = listArray[currentEdge[0]][0 + plus];
+           }
+
+       } while (!found);
+}
+
+            
+heuristicSolutionCplex[xPos(0, currentEdge[1], instance.NNodes)] = 1;
+cost += (int)Point.Distance(instance.Coord[0], instance.Coord[currentEdge[1]], instance.EdgeType);
+
+return new PathGenetic(heuristicSolutionCplex, cost);             
+\end{lstlisting}   
+
+
 \begin{eqnarray}
 &\displaystyle\underbrace{\sum_{j\text{ } : \text{ } x_j = 0} x_j^{*}}_{\text{n. variabili cha passano da 0 a 1}} + \underbrace{\sum_{j\text{ }:\text{ } x_j = 1}(1 - x_j^{*})}_{\text{n. variabili cha passano da 1 a 0}} \le r
 \end{eqnarray}
